fix(navbar): navbar layout breaking on small screen devices.

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,96 +1,126 @@
-.navbar{
-    /* position: fixed; */
-    position:fixed;
-    width: 100vw;
-    height: 4.9rem;
-    background-color: #099268!important;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
-    margin-top: -8.5rem;
-    padding-right: 20px;
-border-bottom: 3px solid rgb(28, 174, 184);
+.navbar {
+  display: flex;
+  background-color: #099268 !important;
+  padding: 8px 10px;
+  position: fixed;
+  margin-top: -8.5rem;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+  border-bottom: 3px solid rgb(28, 174, 184);
 }
-.navbar-content{
-    font-size: 1.4rem;
-    margin-left: 50px;
-    margin-inline: 80px;
+.navbar-content {
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+}
 
+.navbar-content li {
+  list-style: none;
+  margin: 0 10px;
+}
+.navbar-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
 
+.navbar-right {
+  display: flex;
+  align-items: center;
 }
-.logo-img{
-width: 220px;
-margin-right: 500px;
-margin-left: -20px;
 
+.logo-img {
+  width: 200px;
 }
-.navbar-content ul li a.active{
-    color: white;
-    background-color: green;
+.navbar-content ul li a.active {
+  color: white;
+  background-color: green;
 }
-.btn-search{
-    color: black;
-    border: 2px solid rgb(228, 215, 222);
-    letter-spacing: 1px;
-    font-size: 1.3rem;
-    border-radius: 17px;
+.btn-search {
+  color: black;
+  border: 2px solid rgb(228, 215, 222);
+  letter-spacing: 1px;
+  font-size: 1.3rem;
+  border-radius: 17px;
 }
-.search-box{
-    border-radius: 22px;
+.search-box {
+  border-radius: 22px;
 }
-.sidebar{
+.sidebar {
+  width: 18rem;
+  height: 100%;
+  background-color: #099268;
+  position: fixed;
+  top: 4.4rem;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+}
+.sidebar-content {
+  border-bottom: 1px solid rgb(2, 27, 43);
 
-    width: 18rem;
-    height: 100%;
-    background-color: #099268;
-    position: fixed;
-    top: 4.4rem;
-   z-index: 1000;
-   display: flex;
-   flex-direction: column;
-   font-size: 1.4rem;
+  font-weight: 500;
+  margin-block: 8px;
 }
-.sidebar-content{
-    border-bottom: 1px  solid rgb(2, 27, 43);
-   
-    font-weight: 500;
-    margin-block: 8px;
+.sdbar-logo {
+  font-size: 3rem;
+  margin-top: -15px;
 }
-.sdbar-logo{
-    font-size: 3rem;
+.sidebar {
+  display: flex;
+}
+.Link {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+}
+.nav-item {
+  font-size: 1.2rem;
+}
+.Link:hover {
+  color: rgb(38, 3, 3);
+  text-decoration: underline;
+}
+.sidebar-btns {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  align-items: center;
+}
+.sidebar-btn {
+  padding: 2px 5px;
+  margin: 9px;
+  text-align: center;
+  line-height: 1;
+}
+
+.sidebar-btn:hover {
+  color: rgba(0, 0, 0, 0.84);
+}
+.sidebar {
+  color: rgba(0, 0, 0, 0.84);
+}
+
+@media (max-width: 880px) {
+  .navbar-center {
+    display: none;
+  }
+}
+@media (max-width: 580px) {
+  .navbar-right {
+    display: none;
+  }
+  .logo-img {
+    width: 150px;
+    margin-left: -20px;
+  }
+  .sdbar-logo {
+    font-size: 2.8rem;
     margin-top: -15px;
-}
-.sidebar{
-    display:flex;
-}
-.Link{
-    color: black;
-    text-decoration: none;
-    font-weight: 500;
-}
-.nav-item{
-    
-    font-size: 1.6rem;
-}
-.Link:hover{
- color: rgb(38, 3, 3);
- text-decoration: underline;
-}
-.sidebar-btns{
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 1.5rem;
-    align-items: center;
-}
-.sidebar-btn
-{
-    padding:  2px 5px;
-    margin: 9px;
-    text-align: center;
-    line-height: 1;
-}
-
-.sidebar-btn:hover{
-    color: rgba(0, 0, 0, 0.84);
-}
-.sidebar{
-    color: rgba(0, 0, 0, 0.84);
+  }
 }
